test/scripts/invalid-this.cosy
print this // error: Cannot use 'this' outside of a class.
fun a() {
    print this // error: Cannot use 'this' outside of a class.
}
a()
